--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
+title: bl4cknr3d
+description: This is a repository of bl4cknr3d's sample works
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
