--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: bl4cknr3d
-description: This is a simple blog of bl4cknr3d's portfolio and sample works
+title: 
+description: bl4cknr3d's portfolio and sample works
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
